双美pc a标签添加rel=noopener属性值
双美pc a标签添加rel=noopener属性值

--- a/www.hzshuangmei.com/templets/shuangmei/_header_jr_christmas.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_header_jr_christmas.htm
@@ -20,19 +20,19 @@
 <nav id="nav">
     <ul class="shuang_m1 nav_ul">
         <li class="nav_list">
-            <a href="/" class="nav_link" target="_blank">
+            <a href="/" class="nav_link" target="_blank" rel="noopener">
                 <span>首 页</span><br/>
                 <span>Home</span>
             </a>
         </li>
         <li class="nav_list">
-            <a href="/brand" class="nav_link bor_r" target="_blank">
+            <a href="/brand" class="nav_link bor_r" target="_blank" rel="noopener">
                 <span>品 牌</span><br/>
                 <span>brands</span>
             </a>
         </li>
         <li class="nav_list">
-            <a href="/projects" class="nav_link bor_l bor_r" target="_blank">
+            <a href="/projects" class="nav_link bor_l bor_r" target="_blank" rel="noopener">
                 <span>项 目</span><br/>
                 <span>projects</span>
             </a>
@@ -43,14 +43,14 @@
                     </li>
                     {dede:arclist typeid=20 orderby='id' row='3'}
                     <li>
-                        <a href="[field:arcurl/]" target="_blank">
+                        <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
                             <p><i></i><span>[field:title/]</span></p>
                         </a>
                     </li>
                     {/dede:arclist}
                     <li class="n_button">
-                        <a href="/projects" target="_blank">查看更多</a>
+                        <a href="/projects" target="_blank" rel="noopener">查看更多</a>
                     </li>
                 </ul>
                 <ul>
@@ -59,7 +59,7 @@
                     </li>
                     {dede:arclist typeid=15 orderby='id' row='3'}
                     <li>
-                        <a href="[field:arcurl/]" target="_blank">
+                        <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
                             <p><i></i><span>[field:title/]</span></p>
                         </a>
@@ -73,7 +73,7 @@
                     </li>
                     {dede:arclist typeid=14 orderby='id' row='3'}
                     <li>
-                        <a href="[field:arcurl/]" target="_blank">
+                        <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
                             <p><i></i><span>[field:title/]</span></p>
                         </a>
@@ -87,7 +87,7 @@
                     </li>
                     {dede:arclist typeid=16 orderby='id' row='3'}
                     <li class="star">
-                        <a href="[field:arcurl/]" target="_blank">
+                        <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
                             <p><i></i><span>[field:title/]</span></p>
                         </a>
@@ -101,7 +101,7 @@
                     </li>
                     {dede:arclist typeid=21 orderby='id' row='3'}
                     <li>
-                        <a href="[field:arcurl/]" target="_blank">
+                        <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
                             <p><i></i><span>[field:title/]</span></p>
                         </a>
@@ -115,7 +115,7 @@
                     </li>
                     {dede:arclist typeid=22 orderby='id' row='3'}
                     <li>
-                        <a href="[field:arcurl/]" target="_blank">
+                        <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
                             <p><i></i><span>[field:title/]</span></p>
                         </a>
@@ -127,7 +127,7 @@
                     <li>
                         <h5>形体雕塑</h5> </li> {dede:arclist typeid=19 orderby='id' row='3'}
                     <li>
-                        <a href="[field:arcurl/]" target="_blank">
+                        <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
                             <p><i></i><span>[field:title/]</span></p>
                         </a>
@@ -138,7 +138,7 @@
             </div>
         </li>
         <li class="nav_list">
-            <a href="/doctors" class="nav_link bor_l bor_r" target="_blank">
+            <a href="/doctors" class="nav_link bor_l bor_r" target="_blank" rel="noopener">
                 <span>专 家</span><br/>
                 <span>experts</span>
             </a>
@@ -149,7 +149,7 @@
                     </li>
                     {dede:arclist typeid=3 orderby='id' row='2'}
                     <li>
-                        <a href="[field:arcurl/]" target="_blank">
+                        <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:id function='getdoctorthumb(@me) /]" alt=""/>
                             <p><span class="n_f">[field:title/]</span><span class="n_b">[field:id function='getdoctorzhiwei(@me) /]</span></p>
                             <i></i>
@@ -162,7 +162,7 @@
                     </li>
                     {dede:arclist typeid=4 orderby='id' row='2'}
                     <li>
-                        <a href="[field:arcurl/]" target="_blank">
+                        <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:id function='getdoctorthumb(@me) /]" alt=""/>
                             <p><span class="n_f">[field:title/]</span><span class="n_b">[field:id function='getdoctorzhiwei(@me) /]</span></p>
                             <i></i>
@@ -176,7 +176,7 @@
                     </li>
                     {dede:arclist typeid=5 orderby='id' row='2'}
                     <li>
-                        <a href="[field:arcurl/]" target="_blank">
+                        <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:id function='getdoctorthumb(@me) /]" alt=""/>
                             <p><span class="n_f">[field:title/]</span><span class="n_b">[field:id function='getdoctorzhiwei(@me) /]</span></p>
                             <i></i>
@@ -190,7 +190,7 @@
                     </li>
                     {dede:arclist typeid=2 flag="h" orderby='id' row='2'}
                     <li>
-                        <a href="[field:arcurl/]" target="_blank">
+                        <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
                             <p><span class="n_f">[field:title/]</span><span class="n_b">[field:id function='getdoctorzhiwei(@me) /]</span></p>
                             <i></i>
@@ -203,7 +203,7 @@
                         <h5 class="moon">每月专家</h5>
                     </li>
                     <li class="last-one">
-                        <a class="j_consult last-one" target="_blank">
+                        <a class="j_consult last-one" target="_blank" rel="noopener">
                             <img src="{dede:global.cfg_imgpath/}/pc/nav_zhuanjial.jpg" alt=""/>
                         </a>
                     </li>
@@ -211,13 +211,13 @@
             </div>
         </li>
         <li class="nav_list">
-            <a href="/cases" class="nav_link bor_l bor_r" target="_blank">
+            <a href="/cases" class="nav_link bor_l bor_r" target="_blank" rel="noopener">
                 <span>真人秀</span><br/>
                 <span>Show</span>
             </a>
         </li>
         <li class="nav_list">
-            <a href="/news" class="nav_link bor_l" target="_blank">
+            <a href="/news" class="nav_link bor_l" target="_blank" rel="noopener">
                 <span>活 动</span><br/>
                 <span>News</span>
             </a>
