--- a/www.hzshuangmei.com/templets/shuangmei/index_jr_christmas.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/index_jr_christmas.htm
@@ -23,7 +23,7 @@
     <div class="m1 clearFix">
         <div class="video">
             <h2>
-                <a href="/video/" target="_blank">
+                <a href="/video/" target="_blank" rel="noopener">
                     <span>视频中心</span><br/>
                     <img src="{dede:global.cfg_imgpath/}/pc/n_video_center.png" alt="video center"/>
                 </a>
@@ -34,7 +34,7 @@
         </div>
         <div class="news">
             <h2 class="news_h">
-                <a href="/news/" target="_blank">
+                <a href="/news/" target="_blank" rel="noopener">
                     <span>新闻中心</span><br/>
                     <img src="{dede:global.cfg_imgpath/}/pc/latest_activity.png" alt="latest activity"/>
                 </a>
@@ -46,7 +46,7 @@
                 <div class="swiper-container news_swiper">
                     <div class="swiper-wrapper">
                         {dede:arclist typeid=1 orderby='id' flag="c" row='3' addfields="thumb" channelid="20"}
-                        <a href="[field:arcurl/]" class="swiper-slide" target="_blank">
+                        <a href="[field:arcurl/]" class="swiper-slide" target="_blank" rel="noopener">
                             <img src="[field:thumb function='replaceurl(@me)/]" alt="[field:title/]">
 
                             <div class="timu">[field:fulltitle/]</div>
@@ -97,30 +97,30 @@
         <ul id="tabCon2">
             <li class="fdiv2">
                 <div class="clearFix">
-                    <div class="left"><a href="" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_01_1.jpg" alt="红妆芭比大眼"/></a>
+                    <div class="left"><a href="" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_01_1.jpg" alt="红妆芭比大眼"/></a>
                     </div>
                     <div class="right clearFix">
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_02_1.jpg" alt="红妆无痕祛眼袋"/></a>
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_03_1.jpg" alt="韩式隆鼻"/></a>
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_04_1.jpg" alt="红妆芭比翘鼻"/></a>
-                        <a href="/projects/nose/heben.html" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_05_1.jpg" alt="赫本软骨鼻"/></a>
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_06_1.jpg" alt="自体脂肪填充"/></a>
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_07_1.jpg" alt="无痕丰胸"/></a>
+                        <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_02_1.jpg" alt="红妆无痕祛眼袋"/></a>
+                        <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_03_1.jpg" alt="韩式隆鼻"/></a>
+                        <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_04_1.jpg" alt="红妆芭比翘鼻"/></a>
+                        <a href="/projects/nose/heben.html" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_05_1.jpg" alt="赫本软骨鼻"/></a>
+                        <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_06_1.jpg" alt="自体脂肪填充"/></a>
+                        <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_07_1.jpg" alt="无痕丰胸"/></a>
                     </div>
                 </div>
             </li>
             <li>
                 <div class="clearFix">
                     <div class="left">
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_08_1.jpg" alt="无创量子祛斑"/></a>
+                        <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_08_1.jpg" alt="无创量子祛斑"/></a>
                     </div>
                     <div class="right clearFix">
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_09_1.jpg" alt="超声刀"/></a>
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_10_1.jpg" alt="祛雀斑"/></a>
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_11_1.jpg" alt="皮秒祛斑"/></a>
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_12_1.jpg" alt="清凉脱毛"/></a>
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_13_1.jpg" alt="毛孔收缩"/></a>
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_14_1.jpg" alt="激光除皱"/></a>
+                        <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_09_1.jpg" alt="超声刀"/></a>
+                        <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_10_1.jpg" alt="祛雀斑"/></a>
+                        <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_11_1.jpg" alt="皮秒祛斑"/></a>
+                        <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_12_1.jpg" alt="清凉脱毛"/></a>
+                        <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_13_1.jpg" alt="毛孔收缩"/></a>
+                        <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_14_1.jpg" alt="激光除皱"/></a>
                     </div>
                 </div>
             </li>
@@ -129,17 +129,17 @@
                     <div class="left"><a href=""><img src="{dede:global.cfg_imgpath/}/pc/p1_15_1.jpg" alt="微针回春术"/></a>
                     </div>
                     <div class="right clearFix">
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_16_1.jpg" alt="法思丽玻尿酸"/></a>
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_17_1.jpg" alt="瑞蓝玻尿酸"/></a>
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_18_1.jpg" alt="逸美玻尿酸"/></a>
-                        <a  href="projects/ha/ifresh.html" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_19_1.jpg" alt="爱芙莱玻尿酸"/></a>
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_20_1.jpg" alt="瘦脸针"/></a>
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_21_1.jpg" alt="BOTOX"/></a>
+                        <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_16_1.jpg" alt="法思丽玻尿酸"/></a>
+                        <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_17_1.jpg" alt="瑞蓝玻尿酸"/></a>
+                        <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_18_1.jpg" alt="逸美玻尿酸"/></a>
+                        <a  href="projects/ha/ifresh.html" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_19_1.jpg" alt="爱芙莱玻尿酸"/></a>
+                        <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_20_1.jpg" alt="瘦脸针"/></a>
+                        <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_21_1.jpg" alt="BOTOX"/></a>
                     </div>
                 </div>
             </li>
         </ul>
-        <a href="/projects" class="ask" target="_blank" rel="nofollow">MORE+</a>
+        <a href="/projects" class="ask" target="_blank" rel="noopener" rel="nofollow">MORE+</a>
     </div>
     </div>
 </div>
@@ -161,7 +161,7 @@
                     <div class="swiper-wrapper">
                         {dede:arclist typeid=3 orderby='id' addfields="thumb2,zhiwei" channelid="17"}
                         <div class="swiper-slide">
-                            <a href="[field:arcurl/]" target="_blank">
+                            <a href="[field:arcurl/]" target="_blank" rel="noopener">
                                 <img src="[field:thumb2 function='replaceurl(@me)/]" alt="[field:title/]"/>
 
                                 <p>[[field:zhiwei/]] [field:title/]</p>
@@ -178,7 +178,7 @@
                     <div class="swiper-wrapper">
                         {dede:arclist typeid=4 orderby='id' addfields="thumb2,zhiwei" channelid="17"}
                         <div class="swiper-slide">
-                            <a href="[field:arcurl/]" target="_blank">
+                            <a href="[field:arcurl/]" target="_blank" rel="noopener">
                                 <img src="[field:thumb2 function='replaceurl(@me)/]" alt="[field:title/]"/>
 
                                 <p>[[field:zhiwei/]] [field:title/]</p>
@@ -195,7 +195,7 @@
                     <div class="swiper-wrapper">
                         {dede:arclist typeid=5 orderby='id' addfields="thumb2,zhiwei" channelid="17"}
                         <div class="swiper-slide">
-                            <a href="[field:arcurl/]" target="_blank">
+                            <a href="[field:arcurl/]" target="_blank" rel="noopener">
                                 <img src="[field:thumb2 function='replaceurl(@me)/]" alt="[field:title/]"/>
 
                                 <p>[[field:zhiwei/]] [field:title/]</p>
@@ -208,7 +208,7 @@
                 <div class="swiper-button-prev swiper-button-prev4"></div>
             </li>
         </ul>
-        <a href="/doctors" class="ask" target="_blank" rel="nofollow">MORE+</a>
+        <a href="/doctors" class="ask" target="_blank" rel="noopener" rel="nofollow">MORE+</a>
     </div>
 </div>
 <div class="index_clients">
@@ -228,7 +228,7 @@
                 channelid="19"}
                 <li>
                     <div class="clients_t">
-                        <a href="[field:arcurl/]" target="_blank">
+                        <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:imgbefore function='replaceurl(@me)/]" alt="[field:title/]"/>
                             <span>术前</span>
 
@@ -245,7 +245,7 @@
                         <p>塑美方案：[field:project/]</p>
 
                         <p>塑美专家：[field:doctor/]</p>
-                        <div class="clien_but_bg"><a href="[field:arcurl/]" class="xiangqing" target="_blank">案例详情</a><div></div></div>
+                        <div class="clien_but_bg"><a href="[field:arcurl/]" class="xiangqing" target="_blank" rel="noopener">案例详情</a><div></div></div>
                     </div>
                 </li>
                 {/dede:arclist}
@@ -255,13 +255,13 @@
                 channelid="19"}
                 <li>
                     <div class="clients_t">
-                        <a href="[field:arcurl/]" target="_blank">
+                        <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:imgbefore function='replaceurl(@me)/]" alt="[field:title/]"/>
                             <span>术前</span>
 
                             <p>[美丽蜕变] [field:title/]</p>
                         </a>
-                        <a href="[field:arcurl/]" class="qiehuan" target="_blank">
+                        <a href="[field:arcurl/]" class="qiehuan" target="_blank" rel="noopener">
                             <img src="[field:imgafter function='replaceurl(@me)/]" alt="[field:title/]"/>
                             <span>术后</span>
 
@@ -272,7 +272,7 @@
                         <p>塑美方案：[field:project/]</p>
 
                         <p>塑美专家：[field:doctor/]</p>
-                        <div class="clien_but_bg"><a href="[field:arcurl/]" class="xiangqing" target="_blank">案例详情</a><div></div></div>
+                        <div class="clien_but_bg"><a href="[field:arcurl/]" class="xiangqing" target="_blank" rel="noopener">案例详情</a><div></div></div>
 
                     </div>
                 </li>
@@ -283,13 +283,13 @@
                 channelid="19"}
                 <li>
                     <div class="clients_t">
-                        <a href="[field:arcurl/]" target="_blank">
+                        <a href="[field:arcurl/]" target="_blank" rel="noopener">
                             <img src="[field:imgbefore function='replaceurl(@me)/]" alt="[field:title/]"/>
                             <span>术前</span>
 
                             <p>[美丽蜕变] [field:title/]</p>
                         </a>
-                        <a href="[field:arcurl/]" class="qiehuan" target="_blank">
+                        <a href="[field:arcurl/]" class="qiehuan" target="_blank" rel="noopener">
                             <img src="[field:imgafter function='replaceurl(@me)/]" alt="[field:title/]"/>
                             <span>术后</span>
 
@@ -300,14 +300,14 @@
                         <p>塑美方案：[field:project/]</p>
 
                         <p>塑美专家：[field:doctor/]</p>
-                        <div class="clien_but_bg"><a href="[field:arcurl/]" class="xiangqing" target="_blank">案例详情</a><div></div></div>
+                        <div class="clien_but_bg"><a href="[field:arcurl/]" class="xiangqing" target="_blank" rel="noopener">案例详情</a><div></div></div>
 
                     </div>
                 </li>
                 {/dede:arclist}
             </ul>
         </div>
-        <a href="/cases" class="ask" target="_blank" rel="nofollow">MORE+</a>
+        <a href="/cases" class="ask" target="_blank" rel="noopener" rel="nofollow">MORE+</a>
     </div>
 </div>
 <div class="index_environment">
@@ -316,7 +316,7 @@
             <li>
                 <div class="p5_snow"><img src="//img.hzshuangmei.com/pc/p5_snow.png" alt=""/></div>
                 <div class="p5_sdlr"><img src="//img.hzshuangmei.com/pc/p5_sdlr.png" alt=""/></div>
-                <h2><a href="/honors/" target="_blank">红妆荣誉<span>Red makeup honor</span></a></h2>
+                <h2><a href="/honors/" target="_blank" rel="noopener">红妆荣誉<span>Red makeup honor</span></a></h2>
 
                 <div class="swiper-button-next swiper-button-next5 swiper-button-next5_1"></div>
                 <div class="swiper-button-prev swiper-button-prev5 swiper-button-prev5_1"></div>
@@ -324,7 +324,7 @@
                     <div class="swiper-wrapper">
                         {dede:arclist typeid=57 titlelen="120" flag="c" orderby='id' addfields="thumb"
                         channelid="1"}
-                        <a href="[field:arcurl/]" class="swiper-slide" target="_blank">
+                        <a href="[field:arcurl/]" class="swiper-slide" target="_blank" rel="noopener">
                             <img src="[field:thumb function='replaceurl(@me)/]" alt="[field:title/]"/>
 
                             <p>[field:title/]</p>
@@ -336,7 +336,7 @@
             <li>
                 <div class="p5_snow"><img src="//img.hzshuangmei.com/pc/p5_snow.png" alt=""/></div>
                 <div class="p5_sdlr"><img src="//img.hzshuangmei.com/pc/p5_sdlr.png" alt=""/></div>
-                <h2><a href="/environment/" target="_blank">红妆环境<span>Red makeup environment</span></a></h2>
+                <h2><a href="/environment/" target="_blank" rel="noopener">红妆环境<span>Red makeup environment</span></a></h2>
 
                 <div class="swiper-button-next swiper-button-next5 swiper-button-next5_2"></div>
                 <div class="swiper-button-prev swiper-button-prev5 swiper-button-prev5_2"></div>
@@ -344,7 +344,7 @@
                     <div class="swiper-wrapper">
                         {dede:arclist typeid=58 titlelen="120" flag="c" orderby='id' row='3' addfields="thumb"
                         channelid="1"}
-                        <a href="[field:arcurl/]" class="swiper-slide" target="_blank">
+                        <a href="[field:arcurl/]" class="swiper-slide" target="_blank" rel="noopener">
                             <img src="[field:thumb function='replaceurl(@me)/]" alt="[field:title/]"/>
 
                             <p>[field:title/]</p>
@@ -356,7 +356,7 @@
             <li>
                 <div class="p5_snow"><img src="//img.hzshuangmei.com/pc/p5_snow.png" alt=""/></div>
                 <div class="p5_sdlr"><img src="//img.hzshuangmei.com/pc/p5_sdlr.png" alt=""/></div>
-                <h2><a href="/equipment/" target="_blank">尖端设备<span>sophisticated equipment</span></a></h2>
+                <h2><a href="/equipment/" target="_blank" rel="noopener">尖端设备<span>sophisticated equipment</span></a></h2>
 
                 <div class="swiper-button-next swiper-button-next5 swiper-button-next5_3"></div>
                 <div class="swiper-button-prev swiper-button-prev5 swiper-button-prev5_3"></div>
@@ -364,7 +364,7 @@
                     <div class="swiper-wrapper">
                         {dede:arclist typeid=59 titlelen="120" flag="c" orderby='id' addfields="thumb"
                         channelid="1"}
-                        <a href="[field:arcurl/]" class="swiper-slide" target="_blank">
+                        <a href="[field:arcurl/]" class="swiper-slide" target="_blank" rel="noopener">
                             <img src="[field:thumb function='replaceurl(@me)/]" alt="[field:title/]"/>
 
                             <p>[field:title/]</p>
