--- a/www.hzshuangmei.com/templets/shuangmei/list_case.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/list_case.htm
@@ -37,22 +37,22 @@
                     <div class="clearFix">
                 {dede:list pagesize="9" orderby="weight" addfields="imgbefore,imgafter,job,doctor,project"}
                         <div class="list">
-                            <a class="t0" href="[field:arcurl/]" target="_blank">
+                            <a class="t0" href="[field:arcurl/]" target="_blank" rel="noopener">
                                 <img src="[field:imgafter function='replaceurl(@me)/]" alt="[field:title/]整形后">
                             </a>
                             <div class="ltt">
-                                <a class="l_ico" href="[field:arcurl/]" target="_blank">
+                                <a class="l_ico" href="[field:arcurl/]" target="_blank" rel="noopener">
                                     <img src="[field:imgbefore function='replaceurl(@me)/] " alt="[field:title/]整形前">
                                 </a>
                                 <div class="txt">
-                                    <a class="t1" href="[field:arcurl/]" target="_blank">
+                                    <a class="t1" href="[field:arcurl/]" target="_blank" rel="noopener">
                                         <span>姓名：[field:title/]</span><span>职业：[field:job/]</span>
                                     </a>
                                     <div class="t2">塑美项目： [field:project/]</div>
                                     <div class="t3">塑美专家：[field:doctor/]</div>
                                 </div>
                             </div>
-                            <a class="t4" href="[field:arcurl/]" target="_blank">
+                            <a class="t4" href="[field:arcurl/]" target="_blank" rel="noopener">
                                 <img src="//img.hzshuangmei.com/pc/case_video.jpg" alt="案例视频图标"/>
                             </a>
                         </div>
