--- a/www.hzshuangmei.com/templets/shuangmei/list_doctors.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/list_doctors.htm
@@ -32,8 +32,8 @@
                         <div class="doctor1">
                             <div><img src="[field:thumb function='replaceurl(@me)' /]" alt="[field:title/]"></div>
                             <div class="clearFix">
-                                <a href="[field:arcurl/]" class="order" target="_blank"><span>详细<br/>了解</span></a>
-                                <a class="consult j-site-consult" href="javascript:void(0)" target="_blank"><span>马上<br/> 预约</span></a>
+                                <a href="[field:arcurl/]" class="order" target="_blank" rel="noopener"><span>详细<br/>了解</span></a>
+                                <a class="consult j-site-consult" href="javascript:void(0)"  rel="noopener"><span>马上<br/> 预约</span></a>
                             </div>
                         </div>
                         <p class="doc_p1"><span>[field:title/]</span>[field:zhiwei/]</p>
