--- a/www.hzshuangmei.com/templets/shuangmei/list_doctorsold.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/list_doctorsold.htm
@@ -12,16 +12,16 @@
 
 <body>{dede:include filename="_header.htm"/}{dede:myad name='topbanner_pc'/}
 <div class="m1">
-    <div class="location"><i></i><span>µ±Ç°Î»ÖÃ£º</span>{dede:field name='position'/}</div>
+    <div class="location"><i></i><span>ï¿½ï¿½Ç°Î»ï¿½Ã£ï¿½</span>{dede:field name='position'/}</div>
     <div class="line"></div>
     <h2 class="h2_tit"><img src="{dede:global.cfg_imgpath/}/pc/doctors_title.png" alt=""/></h2>
     <div id="doctors_banner"> {dede:myad name='doctorpic_pc'/}</div>
     <div class="doctors_content">
         <div id="doctors_tab">
             <ul class="clearFix">
-                <li class="doc_fli">ÕûÐÎÃÀÈÝ×¨¼Ò</li>
-                <li>Æ¤·ôÃÀÈÝ×¨¼Ò</li>
-                <li>Ò½Ñ§ÎÆÐåÊ¦</li>
+                <li class="doc_fli">ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½×¨ï¿½ï¿½</li>
+                <li>Æ¤ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½×¨ï¿½ï¿½</li>
+                <li>Ò½Ñ§ï¿½ï¿½ï¿½ï¿½Ê¦</li>
             </ul>
         </div>
         <div id="doctors_tabCon">
@@ -30,24 +30,24 @@
             <li>
                 <div class="doctor1">
                     <div><img src="[field:thumb function='replaceurl(@me)' /]" alt="[field:title/]"></div>
-                    <div class="clearFix"><a href="[field:arcurl/]" class="order" target="_blank"><span>ÏêÏ¸<br/>ÁË½â</span></a>
-                        <a class="consult j-site-consult" href="javascript:void(0)" target="_blank"><span>ÂíÉÏ<br/> Ô¤Ô¼</span></a>
+                    <div class="clearFix"><a href="[field:arcurl/]" class="order" target="_blank"><span>ï¿½ï¿½Ï¸<br/>ï¿½Ë½ï¿½</span></a>
+                        <a class="consult j-site-consult" href="javascript:void(0)" target="_blank"><span>ï¿½ï¿½ï¿½ï¿½<br/> Ô¤Ô¼</span></a>
                     </div>
                 </div>
                 <p class="doc_p1"><span>[field:title/]</span>[field:zhiwei/]</p>
-                <p class="doc_p2">ÉÃ³¤ÏîÄ¿£º[field:shanchang/]</p><i></i>
+                <p class="doc_p2">ï¿½Ã³ï¿½ï¿½ï¿½Ä¿ï¿½ï¿½[field:shanchang/]</p><i></i>
             </li>
             {/dede:arclist} -->
                 {dede:sql sql="select * from sm_archives as a,sm_addondoctors as b where a.id=b.aid and a.channel=17 and a.typeid=3 and a.id not in(36,151,154) order by a.weight asc }
                 <li>
                     <div class="doctor1">
                         <div><img src="[field:thumb function='replaceurl(@me)' /]" alt="[field:title/]"></div>
-                        <div class="clearFix"><a href="[field:id runphp='yes']$arcRow=GetOneArchive(@me);@me=$arcRow['arcurl'];[/field:id]" class="order" target="_blank"><span>ÏêÏ¸<br/>ÁË½â</span></a>
-                            <a class="consult j-site-consult" href="javascript:void(0)" target="_blank"><span>ÂíÉÏ<br/> Ô¤Ô¼</span></a>
+                        <div class="clearFix"><a href="[field:id runphp='yes']$arcRow=GetOneArchive(@me);@me=$arcRow['arcurl'];[/field:id]" class="order" target="_blank" rel="noopener"><span>ï¿½ï¿½Ï¸<br/>ï¿½Ë½ï¿½</span></a>
+                            <a class="consult j-site-consult" href="javascript:void(0)" target="_blank"><span>ï¿½ï¿½ï¿½ï¿½<br/> Ô¤Ô¼</span></a>
                         </div>
                     </div>
                     <p class="doc_p1"><span>[field:title/]</span>[field:zhiwei/]</p>
-                    <p class="doc_p2">ÉÃ³¤ÏîÄ¿£º[field:shanchang/]</p><i></i>
+                    <p class="doc_p2">ï¿½Ã³ï¿½ï¿½ï¿½Ä¿ï¿½ï¿½[field:shanchang/]</p><i></i>
                 </li>
                 {/dede:sql}
             </ul>
@@ -56,24 +56,24 @@
             <li>
                 <div class="doctor1">
                     <div><img src="[field:thumb function='replaceurl(@me)' /]" alt="[field:title/]"></div>
-                    <div class="clearFix"><a href="[field:arcurl/]" class="order" target="_blank"><span>ÏêÏ¸<br/>                                   ÁË½â</span></a>
-                        <a class="consult j-site-consult" href="javascript:void(0)" target="_blank"><span>ÂíÉÏ<br/>                                   Ô¤Ô¼</span></a>
+                    <div class="clearFix"><a href="[field:arcurl/]" class="order" target="_blank"><span>ï¿½ï¿½Ï¸<br/>                                   ï¿½Ë½ï¿½</span></a>
+                        <a class="consult j-site-consult" href="javascript:void(0)" target="_blank"><span>ï¿½ï¿½ï¿½ï¿½<br/>                                   Ô¤Ô¼</span></a>
                     </div>
                 </div>
                 <p class="doc_p1"><span>[field:title/]</span>[field:zhiwei/]</p>
-                <p class="doc_p2">ÉÃ³¤ÏîÄ¿£º[field:shanchang/]</p><i></i>
+                <p class="doc_p2">ï¿½Ã³ï¿½ï¿½ï¿½Ä¿ï¿½ï¿½[field:shanchang/]</p><i></i>
             </li>
             {/dede:arclist} -->
                 {dede:sql sql="select * from sm_archives as a,sm_addondoctors as b where a.id=b.aid and a.channel=17 and a.typeid=4 order by a.weight asc }
                 <li>
                     <div class="doctor1">
                         <div><img src="[field:thumb function='replaceurl(@me)' /]" alt="[field:title/]"></div>
-                        <div class="clearFix"><a href="[field:id runphp='yes']$arcRow=GetOneArchive(@me);@me=$arcRow['arcurl'];[/field:id]" class="order" target="_blank"><span>ÏêÏ¸<br/>ÁË½â</span></a>
-                            <a class="consult j-site-consult" href="javascript:void(0)" target="_blank"><span>ÂíÉÏ<br/> Ô¤Ô¼</span></a>
+                        <div class="clearFix"><a href="[field:id runphp='yes']$arcRow=GetOneArchive(@me);@me=$arcRow['arcurl'];[/field:id]" class="order" target="_blank" rel="noopener"><span>ï¿½ï¿½Ï¸<br/>ï¿½Ë½ï¿½</span></a>
+                            <a class="consult j-site-consult" href="javascript:void(0)" target="_blank"><span>ï¿½ï¿½ï¿½ï¿½<br/> Ô¤Ô¼</span></a>
                         </div>
                     </div>
                     <p class="doc_p1"><span>[field:title/]</span>[field:zhiwei/]</p>
-                    <p class="doc_p2">ÉÃ³¤ÏîÄ¿£º[field:shanchang/]</p><i></i>
+                    <p class="doc_p2">ï¿½Ã³ï¿½ï¿½ï¿½Ä¿ï¿½ï¿½[field:shanchang/]</p><i></i>
                 </li>
                 {/dede:sql}
             </ul>
@@ -82,24 +82,24 @@
             <li>
                 <div class="doctor1">
                     <div><img src="[field:thumb function='replaceurl(@me)' /]" alt="[field:title/]"></div>
-                    <div class="clearFix"><a href="[field:arcurl/]" class="order" target="_blank"><span>ÏêÏ¸<br/>                                   ÁË½â</span></a>
-                        <a class="consult j-site-consult" href="javascript:void(0)" target="_blank"><span>ÂíÉÏ<br/>                                   Ô¤Ô¼</span></a>
+                    <div class="clearFix"><a href="[field:arcurl/]" class="order" target="_blank"><span>ï¿½ï¿½Ï¸<br/>                                   ï¿½Ë½ï¿½</span></a>
+                        <a class="consult j-site-consult" href="javascript:void(0)" target="_blank"><span>ï¿½ï¿½ï¿½ï¿½<br/>                                   Ô¤Ô¼</span></a>
                     </div>
                 </div>
                 <p class="doc_p1"><span>[field:title/]</span>[field:zhiwei/]</p>
-                <p class="doc_p2">ÉÃ³¤ÏîÄ¿£º[field:shanchang/]</p> <i></i>
+                <p class="doc_p2">ï¿½Ã³ï¿½ï¿½ï¿½Ä¿ï¿½ï¿½[field:shanchang/]</p> <i></i>
             </li>
             {/dede:arclist} -->
                 {dede:sql sql="select * from sm_archives as a,sm_addondoctors as b where a.id=b.aid and a.channel=17 and a.typeid=5 order by a.weight asc }
                 <li>
                     <div class="doctor1">
                         <div><img src="[field:thumb function='replaceurl(@me)' /]" alt="[field:title/]"></div>
-                        <div class="clearFix"><a href="[field:id runphp='yes']$arcRow=GetOneArchive(@me);@me=$arcRow['arcurl'];[/field:id]" class="order" target="_blank"><span>ÏêÏ¸<br/>ÁË½â</span></a>
-                            <a class="consult j-site-consult" href="javascript:void(0)" target="_blank"><span>ÂíÉÏ<br/> Ô¤Ô¼</span></a>
+                        <div class="clearFix"><a href="[field:id runphp='yes']$arcRow=GetOneArchive(@me);@me=$arcRow['arcurl'];[/field:id]" class="order" target="_blank" rel="noopener"><span>ï¿½ï¿½Ï¸<br/>ï¿½Ë½ï¿½</span></a>
+                            <a class="consult j-site-consult" href="javascript:void(0)" target="_blank"><span>ï¿½ï¿½ï¿½ï¿½<br/> Ô¤Ô¼</span></a>
                         </div>
                     </div>
                     <p class="doc_p1"><span>[field:title/]</span>[field:zhiwei/]</p>
-                    <p class="doc_p2">ÉÃ³¤ÏîÄ¿£º[field:shanchang/]</p><i></i>
+                    <p class="doc_p2">ï¿½Ã³ï¿½ï¿½ï¿½Ä¿ï¿½ï¿½[field:shanchang/]</p><i></i>
                 </li>
                 {/dede:sql}
             </ul>
